# BaseMem

./: .gitignore  AGENTS.md  DEVELOPMENT.md  IMPLEMENTATION.md  README.md  ai-wrapper.sh  generate_antigravity_schemas.py  import_json_history.py  mem-mcp.py  mem.py  models.py  pyproject.toml  requirements.txt  server.py  setup.ps1  setup.sh  uninstall.ps1  uninstall.sh
.github/workflows/: test.yml
cli/: code.py  edge.py  main.py  note.py  planet.py  session.py  task.py
doc/: code-intelligence.md  memory.md  tasks.md
extensions/gemini/: GEMINI.md
extensions/gemini/references/: claude-tools.md  gemini-tools.md
extensions/gemini/skills/using-basemem/: SKILL.md
graph/: engine.py
indexer/: __init__.py  indexer.py  parser.py  schema.py  watcher.py
mcp/: server.py
mcp_server/: server.py
processing/: __init__.py  summarizer.py  workers.py
retrieval/: engine.py
storage/: db.py  notes.py  planets.py  sessions.py  tasks.py
tests/: test_api.py  test_basemem.py  test_cli.py  test_mcp_tools.py  test_tasks.py
visualization/: terminal.py
