[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "basemem"
version = "0.2.0"
description = "AI Knowledge Base System - Pure SQLite Zero-RAM Version"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "BaseMem Contributors"}
]

dependencies = [
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "mcp>=1.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=1.8.0",
    "watchdog>=4.0.0",
]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["ARG", "N802"]
"mcp_server/server.py" = ["N803", "N806", "N802", "E402"]
"mem-mcp.py" = ["E402"]
"storage/sessions.py" = ["ARG002", "ARG001"]
"cli/main.py" = ["ARG001", "ARG005"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = false

[project.scripts]
mem = "cli.main:cli"

[project.optional-dependencies]
# Heavy AI components (Optional)
ai = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.8.0",
]
